-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 FF
-
None
-
-
67fb55574afde13d04f625f44e543e8f111b54d7 (qt/qtmultimedia/dev) 936bca0330a19503844e32053914fdf5e0216576 (qt/qtmultimedia/6.2)
My qtmultimedia snapshot package tracking the dev branch fails to build since a couple weeks. 6.2 alpha shall also fail with the same error:
[ 82s] FAILED: src/multimedia/CMakeFiles/Multimedia.dir/platform/pulseaudio/qaudioengine_pulse.cpp.o [ 82s] /usr/bin/c++ -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_26 -DMultimedia_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_MULTIMEDIA_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_OPENGL_LIB -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -Isrc/multimedia/Multimedia_autogen/include -Iinclude -Iinclude/QtMultimedia -I../src/multimedia -Isrc/multimedia -I../src/multimedia/audio -I../src/multimedia/camera -I../src/multimedia/controls -I../src/multimedia/platform -I../src/multimedia/playback -I../src/multimedia/recording -I../src/multimedia/video -Iinclude/QtMultimedia/6.2.0 -Iinclude/QtMultimedia/6.2.0/QtMultimedia -I../src/multimedia/platform/gstreamer/mediaplayer -I../src/multimedia/platform/gstreamer/mediacapture -isystem /usr/include/qt6/QtCore -isystem /usr/include/qt6 -isystem /usr/lib64/qt6/mkspecs/linux-g++ -isystem /usr/include/qt6/QtGui -isystem /usr/include/qt6/QtNetwork -isystem /usr/include/qt6/QtCore/6.2.0 -isystem /usr/include/qt6/QtCore/6.2.0/QtCore -isystem /usr/include/qt6/QtGui/6.2.0 -isystem /usr/include/qt6/QtGui/6.2.0/QtGui -isystem /usr/include/libxkbcommon -isystem /usr/include/qt6/QtOpenGL -isystem /usr/include/gstreamer-1.0 -isystem /usr/include/glib-2.0 -isystem /usr/lib64/glib-2.0/include -isystem /usr/include/orc-0.4 -isystem /usr/lib64/gstreamer-1.0/include -isystem /usr/include/wayland -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector-strong -funwind-tables -fasynchronous-unwind-tables -fstack-clash-protection -Werror=return-type -flto=auto -g -g -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -pthread -Wsuggest-override -std=c++17 -MD -MT src/multimedia/CMakeFiles/Multimedia.dir/platform/pulseaudio/qaudioengine_pulse.cpp.o -MF src/multimedia/CMakeFiles/Multimedia.dir/platform/pulseaudio/qaudioengine_pulse.cpp.o.d -o src/multimedia/CMakeFiles/Multimedia.dir/platform/pulseaudio/qaudioengine_pulse.cpp.o -c ../src/multimedia/platform/pulseaudio/qaudioengine_pulse.cpp [ 82s] ../src/multimedia/platform/pulseaudio/qaudioengine_pulse.cpp: In member function 'void QPulseAudioEngine::onContextFailed()': [ 82s] ../src/multimedia/platform/pulseaudio/qaudioengine_pulse.cpp:443:5: error: 'QTimer' has not been declared [ 82s] 443 | QTimer::singleShot(3000, this, SLOT(prepare()));
| For Gerrit Dashboard: QTBUG-94745 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 358717,2 | Fix build error about QTimer being undefined | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 358840,2 | Fix build error about QTimer being undefined | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |