Fix build error about QTimer being undefined

Fixes: QTBUG-94745
Change-Id: I2cb12d0e3a4f8ff0d78f5ba6ae4bf828baaab515
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 67fb55574afde13d04f625f44e543e8f111b54d7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>